# flapbird

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/panyi/xyz/flapbird/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bridge.cpp  game.cpp  game.h  log.h
app/src/main/java/panyi/xyz/flapbird/: MainActivity.java  NativeBridge.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/panyi/xyz/flapbird/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
